# floxybot2

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: CHANGELOG.md  architecture-v2.md
plans/: phase-4.md
support-bot-api/: alembic.ini  pyproject.toml
support-bot-api/.flox/: env.json
support-bot-api/.flox/env/: manifest.toml
support-bot-api/alembic/: env.py
support-bot-api/alembic/versions/: 001_initial_schema.py  002_phase2_tickets.py  003_add_doc_type.py  004_channel_identities.py  005_user_memory_recent_skills.py
support-bot-api/src/: __init__.py  config.py  deps.py  main.py
support-bot-api/src/admin/: __init__.py  org_stats.py
support-bot-api/src/auth/: entitlements.py  floxhub.py  middleware.py  rate_limiter.py
support-bot-api/src/context/: engine.py
support-bot-api/src/db/: __init__.py  engine.py  models.py
support-bot-api/src/escalation/: __init__.py  intercom.py
support-bot-api/src/events/: __init__.py  publisher.py  sanitizer.py
support-bot-api/src/llm/: __init__.py  claude.py  codex.py  prompts.py  tools.py
support-bot-api/src/memory/: conversations.py  tickets.py  user.py  votes.py
support-bot-api/src/models/: types.py
support-bot-api/src/rag/: engine.py
support-bot-api/src/router/: intent.py
support-bot-api/src/skills/: loader.py
support-bot-canon/: __init__.py  pyproject.toml
support-bot-canon/.flox/: env.json
support-bot-canon/.flox/env/: manifest.toml
support-bot-canon/scripts/: __init__.py  chunker.py  embedder.py  eval_harness.py  export_upstream.py  index_canon.py  ingest_docs.py  scrape_flox_docs.py
support-bot-cli/: pyproject.toml
support-bot-cli/.flox/: env.json
support-bot-cli/.flox/env/: manifest.toml
support-bot-cli/src/: __init__.py  cli.py
support-bot-copilot/: pyproject.toml
support-bot-copilot/.flox/: env.json
support-bot-copilot/.flox/env/: manifest.toml
support-bot-copilot/src/: __init__.py  api_client.py  copilot.py  entitlements.py  sync.py  sync_cli.py
support-bot-copilot/src/local/: __init__.py  chroma_store.py  config.py  jsonl_queue.py  sqlite_store.py
support-bot-copilot/src/modes/: __init__.py  ask.py  chat.py  diagnose.py  feedback.py  learn.py  ticket.py
support-bot-discord/: package.json
support-bot-flink/: __init__.py  consumer_base.py  runner.py  windows.py
support-bot-shared/: pyproject.toml
support-bot-shared/.flox/: env.json
support-bot-shared/src/: __init__.py
support-bot-shared/src/config/: settings.py
support-bot-shared/src/mcp_server/: server.py
support-bot-shared/src/schemas/: message.py  response.py  vote.py
support-bot-slack/: package.json
tests/: conftest.py  factories.py  test_adapter_contracts.py  test_admin_endpoints.py  test_api_integration.py  test_auth.py  test_canon_gaps.py  test_channel_identity.py  test_chunker.py  test_chunker_ext.py  test_cli_integration.py  test_codex.py  test_conftest_smoke.py  test_context_engine.py  test_copilot_ask.py  test_copilot_chat.py  test_copilot_diagnose.py  test_copilot_entitlements.py  test_copilot_feedback.py  test_copilot_integration.py  test_copilot_learn.py  test_copilot_local.py  test_copilot_sync.py  test_copilot_ticket.py  test_cross_channel.py  test_eval_harness.py  (+32 more)
(+59 files in other folders)
