[project]
name = "support-bot-cli"
version = "0.1.0"
description = "FloxBot CLI — lightweight ask/chat interface"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
]

[project.scripts]
floxbot = "src.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
