[project]
name = "support-bot-copilot"
version = "0.2.0"
description = "FloxBot Co-Pilot — standalone 1:1 learning and support environment"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
    "aiosqlite>=0.20,<1",
    "chromadb>=0.5",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.0,<6",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
